# See if we can cast the automake spell. -*-Makefile-*-
#

AUTOMAKE_OPTIONS = no-dependencies 1.4

SUBDIRS = src tools Documentation conf conf_tmpl err html

docmaindir = $(datadir)/doc/and-httpd-$(VERSION)
docmain_DATA = TODO README NEWS ChangeLog AUTHORS COPYING

wwwgendir    =  $(localstatedir)/www/generated_html
wwwgen_DATA  =  
