
errdir = $(localstatedir)/www/err/example.com
err_DATA = 400 401 403 404 406 410 500 503 \
           \
           400.en.html 400.en.bin 400.en.txt \
           400.fr.html 400.fr.bin 400.fr.txt \
           400.de.html 400.de.bin 400.de.txt \
           400.es.html 400.es.bin 400.es.txt \
           400.it.html 400.it.bin 400.it.txt \
           400.jp.html 400.jp.bin 400.jp.txt \
           \
           401.en.html 401.en.bin 401.en.txt \
           401.fr.html 401.fr.bin 401.fr.txt \
           401.de.html 401.de.bin 401.de.txt \
           401.es.html 401.es.bin 401.es.txt \
           401.it.html 401.it.bin 401.it.txt \
           401.jp.html 401.jp.bin 401.jp.txt \
           \
           403.en.html 403.en.bin 403.en.txt \
           403.fr.html 403.fr.bin 403.fr.txt \
           403.de.html 403.de.bin 403.de.txt \
           403.es.html 403.es.bin 403.es.txt \
           403.it.html 403.it.bin 403.it.txt \
           403.jp.html 403.jp.bin 403.jp.txt \
           \
           404.en.html 404.en.bin 404.en.txt \
           404.fr.html 404.fr.bin 404.fr.txt \
           404.de.html 404.de.bin 404.de.txt \
           404.es.html 404.es.bin 404.es.txt \
           404.it.html 404.it.bin 404.it.txt \
           404.jp.html 404.jp.bin 404.jp.txt \
           \
           406.en.html 406.en.bin 406.en.txt \
           406.fr.html 406.fr.bin 406.fr.txt \
           406.de.html 406.de.bin 406.de.txt \
           406.es.html 406.es.bin 406.es.txt \
           406.it.html 406.it.bin 406.it.txt \
           406.jp.html 406.jp.bin 406.jp.txt \
           \
           410.en.html 410.en.bin 410.en.txt \
           410.fr.html 410.fr.bin 410.fr.txt \
           410.de.html 410.de.bin 410.de.txt \
           410.es.html 410.es.bin 410.es.txt \
           410.it.html 410.it.bin 410.it.txt \
           410.jp.html 410.jp.bin 410.jp.txt \
           \
           500.en.html 500.en.bin 500.en.txt \
           500.fr.html 500.fr.bin 500.fr.txt \
           500.de.html 500.de.bin 500.de.txt \
           500.es.html 500.es.bin 500.es.txt \
           500.it.html 500.it.bin 500.it.txt \
           500.jp.html 500.jp.bin 500.jp.txt \
           \
           503.en.html 503.en.bin 503.en.txt \
           503.fr.html 503.fr.bin 503.fr.txt \
           503.de.html 503.de.bin 503.de.txt \
           503.es.html 503.es.bin 503.es.txt \
           503.it.html 503.it.bin 503.it.txt \
           503.jp.html 503.jp.bin 503.jp.txt 

